--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h1>hello, world</h1>
     <a href="about.html">About this project</a>
     <p> Call me Ishmael.</p>
-    <img src="images/breaching_whale.jpg" alt="a picture of a breaching whale">
+    <a href="https://creativecommons.org/licenses/by-nd/2.0/"><img src="images/breaching_whale.jpg" alt="a picture of a breaching whale"></a>
 </body>
 </html>
