--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About This Friggin Website</title>
+    <title>About This Awesome Website</title>
   </head>
   <body>
-    <h1>About This Friggin Website</h1>
+    <h1>About This Awesome Website</h1>
     <p>
       This site is a great sample project for the <strong> awesome</strong> Git tutorial <a href="https://www.learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>
       </p>
