--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About This Small Website</title>
+    <!-- Add something here to fix trademark -->
   </head>
   <body>
     <h1>About This Small Website</h1>
