--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About This Small Website</title>
-    <!-- Add something here to fix trademark -->
+    <title>About This Durn Website</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>About This Small Website</h1>
