--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>A whale of a greeting</title>
-    <!-- Add something here to fix trademark -->
+    <title>A big whale of a greeting</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>hello, world</h1>
